force-app/main/default/objects/Vehicle__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suv</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>Ev</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>