force-app/main/default/objects/Vehicle__c/fields/Vehicle_Order__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Order__c</fullName>
    <description>Stores vehicle details</description>
    <label>Vehicle Order</label>
    <referenceTo>Vehicle_Order__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>